# nuxc

./: .gitignore  .npmignore  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  TESTING_STRATEGY.md  TODO_MASTER_V2.md  ar04-measure.cjs  ast-03-fix.cjs  ast-03-fix.js  eslint.config.js  jest.config.js  package-lock.json  package.json  phase-2.10-output.txt  phase-2.11-output.txt  phase-2.12-output.txt  phase-2.13-output.txt  phase-2.9-output.txt  phase-3.1-output.txt  phase-3.2-output.txt  phase-3.3-output.txt  phase1.16-output.txt  phase2-angular-output.txt  phase2-nuxt-output.txt  phase2-output.txt  phase2-sveltekit-output.txt  phase_4_output.txt  phase_5_output.txt  playwright.config.ts  rename.js  rename2.js  run-build.mjs  run-fixes.js  scaffold-mfe.cjs  test-all-output.txt  (+3 more)
.github/: copilot-instructions.md
.governance/: AUDIT_REPORT_v1.0.0-freeze.md  AUDIT_REPORT_v1.0.10.md  AUDIT_REPORT_v1.0.2.md  api-baseline.json
benchmarks/: cold-start-verification.ts  honest-cold-start.ts  module7-benchmarks.ts  production-cold-start.ts  run.mjs  ssr-perf.ts  ux-score.ts
docs/: ARCHITECTURE.md  CONTRIBUTING.md  CORE_CONTRACT.md  FAQ.md  FRAMEWORK_SUPPORT.md  FRAMEWORK_SUPPORT_TIERS.md  HMR_IMPLEMENTATION_STATUS.md  LUNX_ARCHITECTURAL_CONSTITUTION.md  NUCE_ARCHITECTURAL_CONSTITUTION.md  PLUGIN_AUTHORING_GUIDE.md  PLUGIN_PERFORMANCE.md  QUICKSTART.md  TEMPLATE_COMPARISON.md  TROUBLESHOOTING.md  USER_GUIDE.md  WHY_LUNX.md  WHY_NUCE.md  benchmarks.md  getting-started.md  index.md  migration-vite.md  migration.md  plugins.md  security.md  starters.md
e2e/: check-all.mjs  check-browser-net.mjs  check-browser.mjs  run-phase-2.16.js  (+1 more)
native/: Cargo.toml  index.cjs  index.d.ts  index.js  package.json
native/src/: chunker.rs  lib.rs  orchestrator.rs  prebundle.rs  task_graph.rs  transform.rs  watcher.rs
src/native/: Cargo.toml  cache.ts  index.d.ts  index.ts  lunx_native.d.ts  nuce_native.d.ts  orchestrator.ts  package.json  wasm.ts
(+1760 files in other folders)
