[package]
name = "lunx-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2", features = ["napi4", "async"] }
napi-derive = "2.12.2"
sha2 = "0.10"
hex = "0.4"
rayon = "1.8"
dashmap = "5.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
petgraph = "0.6"
xxhash-rust = { version = "0.8.15", features = ["xxh3", "xxh64"] }
regex = "1.12.2"
lazy_static = "1.5.0"



[profile.release]
strip = true
